tests/invalid_typecheck/test_tc_sub_left_bool.aphi
/*
Type-check error: Invalid operand for '-' (expected int, got bool).
Left operand of '-' is bool.
*/

bool b;
int x;
int r;

procedure main {
    b = false;
    x = 5;
    r = b - x;
}
